Fixed color of Bookmark page, make fixed color either on ligh/dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap');
 
 :root {
-  --background: #ffffff;
+  --background: #0C0F1A;
   --foreground: #171717;
 }
 
